# c-examples

./: .gitignore  README.md
pthread_manipulation/: CMakeLists.txt  comp_and_build.sh
pthread_manipulation/include/: tests_pthread.h
pthread_manipulation/src/: main.c  test_custom_thread_sleep.c  test_simple_cond_variable.c
